# gw_smt_verify

./: data  smt.mol
c/: Makefile  main.c
rust/: Cargo.toml
rust/src/: conversion.rs  main.rs  smt.rs
